@@ -2,6 +2,7 @@
 
 == Version 0.7.2 (in SVN)
 
+* Fixed [#6616] Can't run Rails specs with RSpec.tmbundle
 * Fixed [#6411] Can't run Rails specs with ruby
 * Added [#6589] New -l --line option. This is useful for IDE/editor runners/extensions.
 * Fixed [#6615] controller.should_render_rjs should support :partial => 'path/to/template'
